--- a/src/main/resources/templates/system/self.html
+++ b/src/main/resources/templates/system/self.html
@@ -96,12 +96,13 @@
                     <div class="row">
                       <div class="form-group col-6 float-lg-right">
                         <label>用户名：</label>
-                        <input type="text" class="form-control" th:placeholder="${session.username}" name="username" disabled>
+                        <input type="text" class="form-control" th:placeholder="${session.username}" name="username" readonly="readonly">
                       </div>
                       <div class="col-6 ">
                         <div class="form-group">
                           <label>性别：</label>
                           <select class="form-control" name="sex" >
+                            <option th:default="${user.sex}eq''" value="请选择">请选择</option>
                             <option th:selected="${user.sex}eq'男'" value="男">男</option>
                             <option th:selected="${user.sex}eq'女'" value="女">女</option>
                           </select>
