--- a/src/main/resources/templates/system/update.html
+++ b/src/main/resources/templates/system/update.html
@@ -96,16 +96,15 @@
                     <div class="row">
                       <div class="form-group col-6 float-lg-right">
                         <label>用户名：</label>
-                        <input type="text" class="form-control" th:placeholder="${session.username}" name="username" disabled>
+                        <input type="text" class="form-control" th:value="${user.username}" name="username" readonly="readonly">
                       </div>
-                      <div class="col-6 ">
-                        <div class="form-group">
+                      <div class="col-6 form-group">
                           <label>性别：</label>
                           <select class="form-control" name="sex" >
+                            <option th:default="${user.sex}eq''" value="">请选择</option>
                             <option th:selected="${user.sex}eq'男'" value="男">男</option>
                             <option th:selected="${user.sex}eq'女'" value="女">女</option>
                           </select>
-                        </div>
                       </div>
                       <div class="form-group col-6 float-lg-left">
                         <label>手机号：</label>
@@ -146,7 +145,7 @@
                   <div class="form-group">
                     <div class="card-footer">
                       <div class="row float-lg-right">
-                        <button type="button" class="btn btn-primary">修改</button>
+                        <button type="submit" class="btn btn-primary">修改</button>
                       </div>
                     </div>
                   </div>
