add assets function

--- a/src/main/resources/templates/base/parts/show.html
+++ b/src/main/resources/templates/base/parts/show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>设备基础信息管理</title>
+    <title>配件基础信息管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -72,12 +72,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>设备基础信息管理</h1>
+                        <h1>配件基础信息管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">设备基础信息管理</li>
+                            <li class="breadcrumb-item active">配件基础信息管理</li>
                         </ol>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入设备检索信息</h3>
+                            <h3 class="card-title">请输入配件检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
@@ -98,7 +98,7 @@
                                 <div class="row">
                                     <div class="col-3 float-lg-left">
                                         <div class="form-group">
-                                            <label>设备类型：</label>
+                                            <label>配件所在类型：</label>
                                             <select class="form-control" name="type">
                                                 <option>放映机</option>
                                                 <option>音响</option>
@@ -112,7 +112,7 @@
                                     </div>
                                     <div class="col-3 float-lg-right">
                                         <div class="form-group">
-                                            <label>设备品牌：</label>
+                                            <label>配件品牌：</label>
                                             <select class="form-control" name="brand">
                                                 <option>可视</option>
                                                 <option>巴克</option>
@@ -122,7 +122,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group col-3 float-lg-left">
-                                        <label>设备型号：</label>
+                                        <label>配件型号：</label>
                                         <select class="form-control" name="brand">
                                             <option>CLP 系列</option>
                                             <option>SLP 系列</option>
@@ -133,7 +133,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group col-3 float-lg-right">
-                                        <label>设备序列号：</label>
+                                        <label>配件序列号：</label>
                                         <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                                     </div>
                                 </div>
@@ -158,11 +158,11 @@
                             <table id="example1" class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>设备ID</th>
-                                    <th>设备类型</th>
-                                    <th>设备品牌</th>
-                                    <th>设备型号</th>
-                                    <th>设备序列号</th>
+                                    <th>配件ID</th>
+                                    <th>配件所在设备类型</th>
+                                    <th>配件品牌</th>
+                                    <th>配件型号</th>
+                                    <th>配件序列号</th>
                                     <th>预留字段</th>
                                     <th>预留字段</th>
                                     <th>详情</th>
