--- a/src/main/resources/templates/base/standard/search.html
+++ b/src/main/resources/templates/base/standard/search.html
@@ -113,15 +113,17 @@
                   </div>
                 </div>
                 <!-- /.card-body -->
-                <div class="card-footer">
-                  <div class="row col-sm-4 float-lg-right">
-                    <button type="submit" class="btn btn-primary">查询</button>
-                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                    <button type="button" class="btn btn-primary">Excel导入</button>
-                    <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                    <a href="/base/standard/insert" style="color: #ffffff;">
-                      <button type="button" class="btn btn-primary">添加</button>
-                    </a>
+                <div class="form-group">
+                  <div class="card-footer">
+                    <div class="row col-sm-4 float-lg-right">
+                      <button type="submit" class="btn btn-primary col-sm-2">查询</button>
+                      <span class="col-sm-3"> &nbsp; &nbsp; &nbsp;</span>
+                      <button type="button" class="btn btn-primary col-sm-3">Excel导入</button>
+                      <span class="col-sm-2"> &nbsp; &nbsp; &nbsp;</span>
+                      <a href="/base/standard/insert" style="color: #ffffff;" class="col-sm-2">
+                        <button type="button" class="btn btn-primary ">添加</button>
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
