--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -75,13 +75,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/data_cinema" class="nav-link">
+                    <a href="/base/equipment/search" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
                         <p>设备基础信息管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/data_cinema" class="nav-link">
+                    <a href="/base/parts/search" class="nav-link">
                         <i class="fa fa-file-text-o nav-icon"></i>
                         <p>配件基础信息管理</p>
                     </a>
@@ -95,7 +95,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="/data_machine" class="nav-link">
+            <a href="/assets/search" class="nav-link">
                 <i class="nav-icon fa fa-cny"></i>
                 <p>
                     资产管理
