--- a/src/main/resources/templates/assets/search.html
+++ b/src/main/resources/templates/assets/search.html
@@ -29,7 +29,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="../../index.html" class="nav-link">主页</a>
+        <a href="/index" class="nav-link">主页</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link"></a>
