--- a/src/main/resources/templates/assets/show.html
+++ b/src/main/resources/templates/assets/show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>设备基础信息管理</title>
+    <title>影院基础信息管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -16,7 +16,6 @@
     <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
     <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
     <script type='text/javascript' th:src='@{/dist/js/city.js}'></script>
-
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -36,7 +35,6 @@
                 <a href="#" class="nav-link"></a>
             </li>
         </ul>
-
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
             <!-- Messages Dropdown Menu -->
@@ -50,7 +48,6 @@
         </ul>
     </nav>
     <!-- /.navbar -->
-
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
@@ -72,12 +69,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>设备基础信息管理</h1>
+                        <h1>影院基础信息管理</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">主页</a></li>
-                            <li class="breadcrumb-item active">设备基础信息管理</li>
+                            <li class="breadcrumb-item active">影院基础信息管理</li>
                         </ol>
                     </div>
                 </div>
@@ -89,7 +86,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入设备检索信息</h3>
+                            <h3 class="card-title">请输入影院检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
@@ -98,51 +95,35 @@
                                 <div class="row">
                                     <div class="col-3 float-lg-left">
                                         <div class="form-group">
-                                            <label>设备类型：</label>
-                                            <select class="form-control" name="type">
-                                                <option>放映机</option>
-                                                <option>音响</option>
-                                                <option>服务器</option>
-                                                <option>音频处理器</option>
-                                                <option>功放设备</option>
-                                                <option>3D系统</option>
-                                                <option>D系统</option>
+                                            <label>所在省市：</label>
+                                            <select id="province" class="form-control" name="province">
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-3 float-lg-right">
                                         <div class="form-group">
-                                            <label>设备品牌：</label>
-                                            <select class="form-control" name="brand">
-                                                <option>可视</option>
-                                                <option>巴克</option>
-                                                <option>杜比</option>
-                                                <option>戴尔</option>
+                                            <label>所在区：</label>
+                                            <select id="city" class="form-control" name="city">
                                             </select>
                                         </div>
                                     </div>
                                     <div class="form-group col-3 float-lg-left">
-                                        <label>设备型号：</label>
-                                        <select class="form-control" name="brand">
-                                            <option>CLP 系列</option>
-                                            <option>SLP 系列</option>
-                                            <option>B 系列</option>
-                                            <option>C 系列</option>
-                                            <option>L 系列</option>
-                                            <option>LHC 系列</option>
-                                        </select>
+                                        <label>影院名称：</label>
+                                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
                                     </div>
                                     <div class="form-group col-3 float-lg-right">
-                                        <label>设备序列号：</label>
-                                        <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
+                                        <label>影院经理：</label>
+                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
                                     </div>
                                 </div>
                                 <div class="card-footer">
-                                    <div class="row col-sm-2 float-lg-right">
-                                        <button type="submit" class="btn btn-primary">查询</button>
-                                        <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                                        <a href="/base/equipment/insert" style="color: #ffffff;">
-                                            <button type="button" class="btn btn-primary">添加</button>
+                                    <div class="row col-sm-4 float-lg-right">
+                                        <button type="submit" class="btn btn-primary col-sm-2">查询</button>
+                                        <span class="col-sm-3"> &nbsp; &nbsp; &nbsp;</span>
+                                        <button type="button" class="btn btn-primary col-sm-3">Excel导入</button>
+                                        <span class="col-sm-2"> &nbsp; &nbsp; &nbsp;</span>
+                                        <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
+                                            <button type="button" class="btn btn-primary ">添加</button>
                                         </a>
                                     </div>
                                 </div>
@@ -158,18 +139,22 @@
                             <table id="example1" class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>设备ID</th>
-                                    <th>设备类型</th>
-                                    <th>设备品牌</th>
-                                    <th>设备型号</th>
-                                    <th>设备序列号</th>
-                                    <th>预留字段</th>
-                                    <th>预留字段</th>
+                                    <th>影院ID</th>
+                                    <th>影院名称</th>
+                                    <th>省市区</th>
+                                    <th>地址</th>
+                                    <th>影院经理</th>
+                                    <th>经理电话</th>
+                                    <th>影院主管</th>
+                                    <th>主管电话</th>
+                                    <th>影厅数量</th>
+                                    <th>操作</th>
                                     <th>详情</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="cinema : ${cinemas}">
+                                    <td th:text="${cinema.id}">北京XXX影城</td>
                                     <td th:text="${cinema.cinemaName}">北京XXX影城</td>
                                     <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
                                     <td th:text="${cinema.address}">平乐园100号</td>
@@ -177,7 +162,18 @@
                                     <td th:text="${cinema.responsiblePhone}">140000</td>
                                     <td th:text="${cinema.manager}">ac</td>
                                     <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                                    <th><a href="/details">详情</a></th>
+                                    <td th:text="${cinema.roomNumber}">1300000000</td>
+                                    <td>
+                                        <div class="float-lg-left">
+                                            <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">
+                                                <button type="button" class="btn btn-sm" style="color: green">修改</button>
+                                            </a>
+                                            <a href="/base/cinema/delete" style="color: #ffffff;">
+                                                <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td ><a th:href="@{/details}">详情>></a></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -200,9 +196,6 @@
     <!-- Control sidebar content goes here -->
 </aside>
 <!-- /.control-sidebar -->
-</div>
-<!-- ./wrapper -->
-
 <!-- jQuery -->
 <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
