--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -90,42 +90,62 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="/cinema/show">
+            <form role="form" action="/base/equipment/show">
               <div class="card-body">
                 <div class="form-group">
                   <div class="row">
                     <div class="col-3 float-lg-left">
                       <div class="form-group">
-                        <label>所在省市：</label>
-                        <select id="province" class="form-control" name="province">
+                        <label>设备类型：</label>
+                        <select class="form-control" name="type">
+                          <option>放映机</option>
+                          <option>音响</option>
+                          <option>服务器</option>
+                          <option>音频处理器</option>
+                          <option>功放设备</option>
+                          <option>3D系统</option>
+                          <option>D系统</option>
                         </select>
                       </div>
                     </div>
                     <div class="col-3 float-lg-right">
                       <div class="form-group">
-                        <label>所在区：</label>
-                        <select id="city" class="form-control" name="city">
+                        <label>设备品牌：</label>
+                        <select class="form-control" name="brand">
+                          <option>可视</option>
+                          <option>巴克</option>
+                          <option>杜比</option>
+                          <option>戴尔</option>
                         </select>
                       </div>
                     </div>
                     <div class="form-group col-3 float-lg-left">
-                      <label>影院名称：</label>
-                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                      <label>设备型号：</label>
+                      <select class="form-control" name="brand">
+                        <option>CLP 系列</option>
+                        <option>SLP 系列</option>
+                        <option>B 系列</option>
+                        <option>C 系列</option>
+                        <option>L 系列</option>
+                        <option>LHC 系列</option>
+                      </select>
                     </div>
                     <div class="form-group col-3 float-lg-right">
-                      <label>影院经理：</label>
-                      <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                      <label>设备序列号：</label>
+                      <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                     </div>
                   </div>
                 </div>
                   <!-- /.card-body -->
                 <div class="form-group">
                   <div class="card-footer">
-                    <div class="row col-sm-2 float-lg-right">
-                      <button type="submit" class="btn btn-primary">查询</button>
-                      <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                      <a href="/base/cinema/insert" style="color: #ffffff;">
-                        <button type="button" class="btn btn-primary">添加</button>
+                    <div class="row col-sm-4 float-lg-right">
+                      <button type="submit" class="btn btn-primary col-sm-2">查询</button>
+                      <span class="col-sm-3"> &nbsp; &nbsp; &nbsp;</span>
+                      <button type="button" class="btn btn-primary col-sm-3">Excel导入</button>
+                      <span class="col-sm-2"> &nbsp; &nbsp; &nbsp;</span>
+                      <a href="/base/equipment/insert" style="color: #ffffff;" class="col-sm-2">
+                        <button type="button" class="btn btn-primary ">添加</button>
                       </a>
                     </div>
                   </div>
