--- a/src/main/resources/templates/base/parts/search.html
+++ b/src/main/resources/templates/base/parts/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院基础信息管理</title>
+  <title>配件基础信息管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -69,12 +69,12 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>影院基础信息管理</h1>
+          <h1>配件基础信息管理</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="#">主页</a></li>
-            <li class="breadcrumb-item active">影院基础信息管理</li>
+            <li class="breadcrumb-item active">配件基础信息管理</li>
           </ol>
         </div>
       </div>
@@ -86,35 +86,53 @@
       <div class="col-12">
       <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">请输入影院检索信息</h3>
+              <h3 class="card-title">请输入配件检索信息</h3>
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="/base/cinema/show">
+            <form role="form" action="/base/equipment/show">
               <div class="card-body">
                 <div class="form-group">
                   <div class="row">
                     <div class="col-3 float-lg-left">
                       <div class="form-group">
-                        <label>所在省市：</label>
-                        <select id="province" class="form-control" name="province">
+                        <label>配件所在设备类型：</label>
+                        <select class="form-control" name="type">
+                          <option>放映机</option>
+                          <option>音响</option>
+                          <option>服务器</option>
+                          <option>音频处理器</option>
+                          <option>功放设备</option>
+                          <option>3D系统</option>
+                          <option>D系统</option>
                         </select>
                       </div>
                     </div>
                     <div class="col-3 float-lg-right">
                       <div class="form-group">
-                        <label>所在区：</label>
-                        <select id="city" class="form-control" name="city">
+                        <label>配件品牌：</label>
+                        <select class="form-control" name="brand">
+                          <option>可视</option>
+                          <option>巴克</option>
+                          <option>杜比</option>
+                          <option>戴尔</option>
                         </select>
                       </div>
                     </div>
                     <div class="form-group col-3 float-lg-left">
-                      <label>影院名称：</label>
-                      <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                      <label>配件型号：</label>
+                      <select class="form-control" name="brand">
+                        <option>CLP 系列</option>
+                        <option>SLP 系列</option>
+                        <option>B 系列</option>
+                        <option>C 系列</option>
+                        <option>L 系列</option>
+                        <option>LHC 系列</option>
+                      </select>
                     </div>
                     <div class="form-group col-3 float-lg-right">
-                      <label>影院经理：</label>
-                      <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                      <label>配件序列号：</label>
+                      <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                     </div>
                   </div>
                 </div>
@@ -126,12 +144,13 @@
                       <span class="col-sm-3"> &nbsp; &nbsp; &nbsp;</span>
                       <button type="button" class="btn btn-primary col-sm-3">Excel导入</button>
                       <span class="col-sm-2"> &nbsp; &nbsp; &nbsp;</span>
-                      <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
+                      <a href="/base/parts/insert" style="color: #ffffff;" class="col-sm-2">
                         <button type="button" class="btn btn-primary ">添加</button>
                       </a>
                     </div>
                   </div>
                 </div>
+
               </div>
             </form>
       </div>
@@ -144,8 +163,14 @@
   </div>
 <!-- /.content-wrapper -->
   <div th:replace="/model/footer :: footer-and-right"></div>
-<!-- ./wrapper -->
+  <!-- Control Sidebar -->
+<!--  <aside class="control-sidebar control-sidebar-dark">-->
+<!--    &lt;!&ndash; Control sidebar content goes here &ndash;&gt;-->
+<!--  </aside>-->
+  <!-- /.control-sidebar -->
 </div>
+<!-- ./wrapper -->
+
 <!-- jQuery -->
 <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
