--- a/src/main/resources/templates/system/user.html
+++ b/src/main/resources/templates/system/user.html
@@ -120,7 +120,7 @@
                                             <a th:href="@{/system/update(username=${user.username})}" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-sm" style="color: green">修改</button>
                                             </a>
-                                            <a href="/system/delete" style="color: #ffffff;">
+                                            <a th:href="@{/system/delete(username=${user.username})}" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-sm" style="color: red">删除</button>
                                             </a>
                                         </div>
