--- a/src/main/resources/templates/question/question.html
+++ b/src/main/resources/templates/question/question.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card card-primary">
-                            <div class="card-header">
+                        <div class="card-header">
                                 <h3 class="card-title">答题方式</h3>
                             </div>
                         <div class="card-body">
@@ -96,6 +96,7 @@
                             <a href="/question/insert">
                                 <button type="button" class="btn btn-primary">添加题目</button>
                             </a>
+                    </div>
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
