--- a/src/main/resources/templates/model/topper.html
+++ b/src/main/resources/templates/model/topper.html
@@ -7,8 +7,8 @@
                 <img th:src="@{/images/admin.png}" width="25" height="25" style="margin-bottom: 5px;">
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">个人中心</a>
-                <a class="dropdown-item" href="#">设置</a>
+                <a class="dropdown-item" th:href="@{/system/self}">个人中心</a>
+                <a class="dropdown-item" th:href="@{/system/self}">设置</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout">退出</a>
             </div>
