--- a/src/main/resources/templates/system/user.html
+++ b/src/main/resources/templates/system/user.html
@@ -117,10 +117,10 @@
                                     <td th:text="${user.role}"></td>
                                     <td>
                                         <div class="float-lg-left">
-                                            <a th:href="@{/system/update(username=${user.username})}" style="color: #ffffff;">
+                                            <a th:href="@{/system/update/{username}(username=${user.username})}" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-sm" style="color: green">修改</button>
                                             </a>
-                                            <a th:href="@{/system/delete(username=${user.username})}" style="color: #ffffff;">
+                                            <a th:href="@{/system/delete/{username}(username=${user.username})}" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-sm" style="color: red">删除</button>
                                             </a>
                                         </div>
