login authorize function

--- a/src/main/resources/templates/base/cinema/show.html
+++ b/src/main/resources/templates/base/cinema/show.html
@@ -149,6 +149,7 @@
                                     <th>主管电话</th>
                                     <th>影厅数量</th>
                                     <th>操作</th>
+                                    <th>详情</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -172,6 +173,7 @@
                                             </a>
                                         </div>
                                     </td>
+                                    <td ><a th:href="@{/details}">详情>></a></td>
                                 </tr>
                                 </tbody>
                             </table>
