--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -24,7 +24,7 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a class="nav-link">
                 <i class="nav-icon fa fa-dashboard"></i>
                 <p>
                     系统管理
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/blank_api" class="nav-link">
+                    <a href="/system/blank_api" class="nav-link">
                         <i class="fa fa-plug nav-icon"></i>
                         <p>数据接口管理</p>
                     </a>
@@ -139,13 +139,13 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="/calendar_manage" class="nav-link">
+                    <a href="/task/calendar_manage" class="nav-link">
                         <i class="fa fa-calendar nav-icon"></i>
                         <p>日常任务总览</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/task_search" class="nav-link">
+                    <a href="/task/task_search" class="nav-link">
                         <i class="fa fa-thumb-tack nav-icon"></i>
                         <p>日常任务查询</p>
                     </a>
@@ -182,7 +182,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="/direction_chat" class="nav-link">
+            <a href="/ai/direction_chat" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     智能在线答疑
@@ -191,7 +191,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/statistic_analysis" class="nav-link">
+            <a href="/analysis/statistic_analysis" class="nav-link">
                 <i class="nav-icon fa fa-pie-chart"></i>
                 <p>
                     业务统计分析
@@ -243,7 +243,7 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="/online_course" class="nav-link">
+            <a href="/course/online_course" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     在线课程
