--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
                 <div align="center">
                     <h3 th:text="#{login.tip}">影院放映质量信息服务系统</h3>
                 </div>
-                <form class="form-horizontal" action="/logining">
+                <form class="form-horizontal" action="/auth">
                     <div class="form-box col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-xs-6 col-sm-6 col-md-6">
                         <div class="form-group">
                             <div class="input-group">
