--- a/src/main/resources/templates/system/self.html
+++ b/src/main/resources/templates/system/self.html
@@ -90,7 +90,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" th:action="@{/system/selfing}" >
+              <form role="form" th:action="@{/system/selfing}" method="post">
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
