add chat module

--- a/src/main/resources/templates/base/cinema/show.html
+++ b/src/main/resources/templates/base/cinema/show.html
@@ -173,7 +173,7 @@
                                             </a>
                                         </div>
                                     </td>
-                                    <td ><a th:href="@{/details}">详情>></a></td>
+                                    <td ><a th:href="@{/base/cinema/details}">详情>></a></td>
                                 </tr>
                                 </tbody>
                             </table>
