--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -134,7 +134,7 @@
               </form>
             </div>        
           <!-- /.card -->
-		  <div class="card">
+		  <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">相关标准</h3>
             </div>
