--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -93,7 +93,7 @@
               <div class="row">
                 <div class="col-12">
                   <h4>
-                    <small class="float-left">XX 设备维护教程</small>
+                    <small class="float-left">放映机 设备维护教程</small>
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
@@ -138,7 +138,7 @@
                     <thead>
                     <tr>
                       <th>操作步骤</th>
-                      <th>解决方法</th>
+                      <th>具体操作</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -160,14 +160,14 @@
                     </tr>
                     </tbody>
                   </table>
+                    <div class="col-11">
+                      <button style="float: right" type="submit" class="btn btn-info">答题</button>
+                    </div>
 				  </div>
 				  <div class="col-6 table-responsive">
                     <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
                       <span>&nbsp;</span>
                     </video>
-                    <div class="col-11">
-                    <button style="float: left" type="submit" class="btn btn-info">答题</button>
-                    </div>
                   </div>
                 <!-- /.col -->
               </div>
