--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -250,6 +250,14 @@
                 </p>
             </a>
         </li>
+        <li class="nav-item">
+            <a href="/chat/chat" class="nav-link">
+                <i class="nav-icon fa fa-table"></i>
+                <p>
+                    经验交流
+                </p>
+            </a>
+        </li>
     </ul>
 </nav>
 </div>
