add online question page

--- a/src/main/resources/templates/question/online.html
+++ b/src/main/resources/templates/question/online.html
@@ -132,9 +132,9 @@
                                     </div>
                                 </div>
                                 <div class="card-footer float-lg-right">
-                                    <a href="/question/details">
-                                        <button type="submit" class="btn btn-primary">生成</button>
-                                    </a>
+                                    <button type="submit" class="btn btn-primary">
+                                            <a href="/question/details" style="color: #fff;">生成</a>
+                                    </button>
                                 </div>
                             </div>
                         </form>
