--- a/src/main/resources/templates/base/parts/search.html
+++ b/src/main/resources/templates/base/parts/search.html
@@ -138,13 +138,13 @@
                 </div>
                   <!-- /.card-body -->
                 <div class="form-group">
-                  <div class="card-footer">
-                    <div class="row col-sm-4 float-lg-right">
-                      <button type="submit" class="btn btn-primary col-sm-2">查询</button>
-                      <span class="col-sm-3"> &nbsp; &nbsp; &nbsp;</span>
-                      <button type="button" class="btn btn-primary col-sm-3">Excel导入</button>
-                      <span class="col-sm-2"> &nbsp; &nbsp; &nbsp;</span>
-                      <a href="/base/parts/insert" style="color: #ffffff;" class="col-sm-2">
+                  <div class="row col-sm-4 float-right">
+                    <div style="margin-left: 175px;">
+                      <button type="submit" class="btn btn-primary">筛选</button>
+                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
+                      <button type="button" class="btn btn-primary">导入</button>
+                      <span class="col-sm-2"> &nbsp; &nbsp;</span>
+                      <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
                         <button type="button" class="btn btn-primary ">添加</button>
                       </a>
                     </div>
